--- a/style.css
+++ b/style.css
@@ -4,11 +4,99 @@
 }
 
 body {
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  text-align: center;
   background: black;
   color: white;
 }
+
+h1 {
+  margin-top: 0.5em;
+}
+
+main {
+margin-left: 1em;
+margin-right: 1em;
+}
+
+iframe {
+  padding-top: 3.5em;
+  margin: auto;
+  display: inline-block;
+  width: 359.984px;
+  height: 201.984px;
+}
+
+.message {
+margin-top: 3em;
+}
+
+input {
+  width: 20em;
+  height: 1.5em;
+  margin-top: 4em;
+}
+
+button {
+  display: block;
+  margin: auto;
+  margin-top: 1em;
+  margin-bottom: 2.5em;
+  padding: 0.5em;
+}
+
+.songInQue {
+  max-width: 100%;
+  height: 5em;
+  background: white;
+  color: black;
+  margin: auto;
+  margin-bottom: 1em;
+  text-align: left;
+  display: flex;
+}
+
+.songData {
+  /* background: blue; */
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.buttons {
+  /* background: red; */
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.buttons span {
+  margin-top: .3em;
+  margin-bottom: .3em;
+  margin-right: .5em;
+}
+
+.songInQue p {
+  margin-top: .3em;
+  margin-bottom: .3em;
+  margin-left: .5em;
+}
+
+
+@media(min-width: 42.3em) {
+  main {
+    max-width: 70%;
+    margin: auto;
+  }
+
+  iframe {
+    width: 359.984px;
+    height: 201.984px;
+    }
+}
+
+@media(min-width: 57.7125em) {
+}
+
+@media(min-width: 84.6em) {
+  }
