--- a/style.css
+++ b/style.css
@@ -14,8 +14,22 @@ h1 {
   margin-top: 0.5em;
 }
 
+h2 {
+  margin-top: 2em;
+  margin-bottom: .5em;
+}
+
+.title,
+.artist {
+  font-size: 1.1em;
+}
+
+.from {
+  font-size: 0.8em;
+}
+
 iframe {
-  padding-top: 3.5em;
+  padding-top: 1em;
   margin: auto;
   display: inline-block;
   width: 323.9856px;
