--- a/style.css
+++ b/style.css
@@ -78,7 +78,7 @@ button {
   flex: 1;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: space-around;
 }
 
 .buttons {
@@ -95,8 +95,8 @@ button {
 }
 
 .songInQue p {
-  margin-top: .3em;
-  margin-bottom: .3em;
+  /* margin-top: .6em;
+  margin-bottom: .6em; */
   margin-left: .5em;
 }
 
