--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 body {
   text-align: center;
-  background: black;
+  background: #111;
   color: white;
 }
 
@@ -22,10 +22,14 @@ h2 {
 .title,
 .artist {
   font-size: 1.1em;
+  opacity: 0.95;
+  color: #e0e7e9;
 }
 
 .by {
   font-size: 0.8em;
+  opacity: 0.95;
+  color: #e0e7e9;
 }
 
 iframe {
@@ -52,6 +56,7 @@ input {
   width: 20em;
   height: 1.5em;
   margin-top: 4em;
+  text-align: center;
 }
 
 button {
@@ -62,24 +67,26 @@ button {
   padding: 0.5em;
 }
 
+
 .songInQue {
   max-width: 92%;
   height: 5em;
-  background: white;
+  background: #e0e7e9;
   color: black;
   margin: auto;
   margin-bottom: 1em;
   text-align: left;
   display: flex;
   border-bottom-right-radius: 20px;
-  border-bottom-left-radius: 2px;
-  border-top-right-radius: 2px;
+  border-bottom-left-radius: 10px;
+  border-top-right-radius: 10px;
   border-top-left-radius: 20px;
   -webkit-transform: skew(-10deg);
+  opacity: 0.95;
 }
 
 .songInQue:nth-child(odd) {
-  background: red;
+  background: #a3c6c4;
 }
 
 .songData {
