--- a/style.css
+++ b/style.css
@@ -19,21 +19,24 @@ body {
 
 h1 {
   margin-top: 1em;
+  font-size: 2em;
+  line-height: 1.6;
   font-family: cursive;
   font-family: 'Gloria Hallelujah', cursive;
-  text-transform: uppercase;
+  text-transform: capitalize;
 }
 
 h2 {
   margin-top: 1.3em;
   margin-bottom: 1em;
+  font-size: 1.5em;
   font-family: 'Gloria Hallelujah', cursive;
   /* text-transform: uppercase; */
 }
 
 .title,
 .artist {
-  font-size: 1.1em;
+  font-size: 1em;
   opacity: 0.95;
   color: #e0e7e9;
   margin: 0.6em;
@@ -41,7 +44,7 @@ h2 {
 }
 
 .by {
-  font-size: 0.8em;
+  font-size: 0.7em;
   opacity: 0.95;
   color: #e0e7e9;
   font-family: 'Fondamento', cursive;
@@ -105,6 +108,8 @@ input {
   box-shadow: 
   5px 5px 11px 2px rgba(0, 0, 0, 1),
   -3px -3px 11px 0 rgba(90, 90, 90, 0.4);
+  font-size: 0.8em;
+  font-family: 'Fondamento', cursive;
 }
 
 input:focus {
@@ -114,7 +119,6 @@ input:focus {
   -3px -3px 11px 0 rgba(0, 0, 0, 1);
   outline: none;
 }
-
 
 button {
   display: block;
@@ -140,7 +144,7 @@ button {
 } */
 
 .addButton {
-  margin-top: 2em;
+  margin-top: 2.5em;
   background-color: #222;
   color: #e0e7e9;
   border: none;
@@ -150,6 +154,7 @@ button {
   5px 5px 11px 2px rgba(0, 0, 0, 1),
   -3px -3px 11px 0 rgba(90, 90, 90, 0.4);
   transition: all 0.3s ease-in-out;
+  font-size: 0.8em;
   font-family: 'Gloria Hallelujah', cursive;
   font-weight: 800;
   text-transform: uppercase;
@@ -179,7 +184,7 @@ button {
 
 .songInQue {
   /* max-width: 92%; */
-  width: 340px;
+  width: 330px;
   height: 5em;
   /* background: #e0e7e9; */
   /* color: black; */
@@ -201,6 +206,12 @@ button {
     margin-top: 2.5em;
 }
 
+.songInQue p {
+  /* margin-top: .6em;
+  margin-bottom: .6em; */
+  margin-left: .5em;
+}
+
 /* .songInQue:nth-child(odd) {
   background: #a3c6c4;
 } */
@@ -215,6 +226,7 @@ button {
   justify-content: space-around;
   margin-left: 0.5em;
   margin-right: 0.5em;
+  font-size: 0.8em;
   font-family: 'Fondamento', cursive;
 }
 
@@ -255,17 +267,45 @@ button {
   margin-right: .5em;
 }
 */
-.songInQue p {
-  /* margin-top: .6em;
-  margin-bottom: .6em; */
-  margin-left: .5em;
-}
 
 
 @media(min-width: 42.3em) {
+  h1 {
+    font-size: 2.1em;
+  }
+
+  h2 {
+    font-size: 1.6em;
+  }
+
+  .title, .artist {
+    font-size: 1.1em;
+  }
+
+  .by {
+    font-size: 0.8em;
+  }
+
+  input {
+    font-size: .9em;
+  }
+
+  .addButton{
+    font-size: .9em;
+  }
+
+  .songData {
+    font-size: .9em;
+  }
+
+  .songInQue p {
+    margin-left: .7em;
+  }
+
   .songInQue {
     /* max-width: 70%; */
     width: 500px;
+    height: 5.2em;
   }
 
   .container {
@@ -279,9 +319,42 @@ button {
 }
 
 @media(min-width: 57.7125em) {
+  h1 {
+    font-size: 2.2em;
+  }
+
+  h2 {
+    font-size: 1.7em;
+  }
+
+  .title, .artist {
+    font-size: 1.2em;
+  }
+
+  .by {
+    font-size: 0.9em;
+  }
+
+  input {
+    font-size: 1em;
+  }
+
+  .addButton{
+    font-size: 1em;
+  }
+
+  .songData {
+    font-size: 1em;
+  }
+
+  .songInQue p {
+    margin-left: .9em;
+  }
+
   .songInQue {
     /* max-width: 55%; */
     width: 600px;
+    height: 5.3em;
   }
 
   .container {
@@ -298,9 +371,42 @@ button {
 }
 
 @media(min-width: 84.6em) {
+  h1 {
+    font-size: 2.3em;
+  }
+
+  h2 {
+    font-size: 1.8em;
+  }
+
+  .title, .artist {
+    font-size: 1.3em;
+  }
+
+  .by {
+    font-size: 1em;
+  }
+
+  input {
+    font-size: 1.1em;
+  }
+
+  .addButton{
+    font-size: 1.1em;
+  }
+
+  .songData {
+    font-size: 1.1em;
+  }
+
+  .songInQue p {
+    margin-left: 1.2em;
+  }
+
   .songInQue {
     /* max-width: 40%; */
     width: 770px;
+    height: 5.4em;
   }
 
   .container {
