--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ iframe {
 }
 
 #player {
-  margin-top: 1em;
+  margin-bottom: 2.8em;
   box-sizing: content-box;
   /* padding: 2em; */
   /* border-radius: 2em; */
@@ -89,19 +89,21 @@ original dimensions:
 */
 
 .message {
-  margin-top: 2em;
-  padding-bottom: 3em;
+  max-width: 92%;
+  margin: auto;
+  padding-bottom: 2.8em;
   display: none;
   color: red;
   font-style: italic;
-  font-size: 0.8em;
-  font-family: 'Fondamento', cursive;
+  font-size: 1em;
+  font-family: 'Gloria Hallelujah', cursive;
+  line-height: 1.6;
 }
 
 input {
   width: 20em;
   padding: .3em;
-  margin-top: 1.3em;
+  margin-top: 3em;
   text-align: center;
   background-color: #e0e7e9;
   color: #222;
@@ -290,7 +292,7 @@ button {
 
   .message {
     margin-bottom: 3em;
-    font-size: .9em;
+    font-size: 1em;
   }
 
   input {
@@ -347,7 +349,7 @@ button {
 
   .message {
     margin-bottom: 3em;
-    font-size: 1em;
+    font-size: 1.1em;
   }
 
 
@@ -405,7 +407,7 @@ button {
 
   .message {
     margin-bottom: 3em;
-    font-size: 1.1em;
+    font-size: 1.2em;
   }
 
   input {
