--- a/style.css
+++ b/style.css
@@ -10,9 +10,9 @@
 
 body {
   text-align: center;
-  /* background: white; */
   background: #222;
   color: white;
+  text-shadow: 3px 3px 7px rgba(0, 0, 0, 1);
 }
 
 h1 {
