--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
 }
 
 h1 {
-  margin-top: 1em;
+  margin-top: .5em;
   font-size: 2em;
   line-height: 1.6;
   font-family: cursive;
@@ -24,12 +24,30 @@ h1 {
   text-transform: capitalize;
 }
 
+.inProgress {
+  color: red;
+  font-style: italic;
+  font-size: 1.3em;
+  font-family: 'Gloria Hallelujah', cursive;
+}
+
 h2 {
-  margin-top: 1.3em;
-  margin-bottom: 1em;
+  margin-top: 1.2em;
   font-size: 1.5em;
   font-family: 'Gloria Hallelujah', cursive;
+  color: red;
+  font-style: italic;
   /* text-transform: uppercase; */
+}
+
+/* .playerTitle {
+  color: red;
+  font-style: italic;
+} */
+
+.SongDescription {
+  display: flex;
+  flex-direction: column;
 }
 
 .title,
@@ -59,7 +77,7 @@ iframe {
 
 #player {
   margin-top: 1em;
-  margin-bottom: 2.8em;
+  /* margin-bottom: 2.8em; */
   box-sizing: content-box;
   /* padding: 2em; */
   /* border-radius: 2em; */
@@ -92,7 +110,8 @@ original dimensions:
 .message {
   max-width: 92%;
   margin: auto;
-  padding-bottom: 2.8em;
+  margin-top: 1em;
+  /* padding-bottom: 2.8em; */
   display: none;
   color: red;
   font-style: italic;
@@ -102,9 +121,11 @@ original dimensions:
 }
 
 input {
+  display: block;
   width: 20em;
+  margin: auto;
   padding: .3em;
-  margin-top: 3em;
+  margin-top: 2.8em;
   text-align: center;
   background-color: #e0e7e9;
   color: #222;
@@ -170,7 +191,6 @@ button {
   box-shadow: 
   -9px -9px 29px 9px rgba(90, 90, 90, 0.4),
   5px 5px 9px 9px rgba(0, 0, 0, 1);
-
 }
 
 .addButton:active {
@@ -184,8 +204,6 @@ button {
 .addButton:focus {
   outline: none;
 }
-
-
 
 .songInQue {
   /* max-width: 92%; */
@@ -252,11 +270,8 @@ button {
   vertical-align: bottom;
 }
 
-.inProgress {
-  color: red;
-  font-style: italic;
-  font-size: 1.3em;
-  font-family: 'Gloria Hallelujah', cursive;
+footer {
+  margin-bottom: 2em;
 }
 
 /*
@@ -276,10 +291,12 @@ button {
 
 @media(min-width: 42.3em) {
   h1 {
+    margin-top: 1em;
     font-size: 2.1em;
   }
 
   h2 {
+    margin-top: 2.8em;
     font-size: 1.6em;
   }
 
@@ -311,6 +328,12 @@ button {
   .songInQue p {
     margin-left: .7em;
   }
+  
+.SongDescription {
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
 
   .songInQue {
     /* max-width: 70%; */
@@ -320,9 +343,9 @@ button {
 
   .container {
     width: 520px;
-    box-shadow: 
+    /* box-shadow: 
     5px 5px 11px 2px rgba(0, 0, 0, 1),
-    -3px -3px 11px 0 rgba(90, 90, 90, 0.4);  
+    -3px -3px 11px 0 rgba(90, 90, 90, 0.4);   */
   }
 
   iframe {
@@ -333,11 +356,17 @@ button {
 
 @media(min-width: 57.7125em) {
   h1 {
+    margin-top: 0.5em;
     font-size: 2.2em;
   }
 
   h2 {
+    margin-top: 1.2em;
     font-size: 1.7em;
+  }
+
+  .SongDescription {
+    margin-top: .7em;
   }
 
   .title, .artist {
