--- a/fullList.css
+++ b/fullList.css
@@ -154,17 +154,17 @@ button {
   padding: 0.5em;
 }
 
-.hideList:hover {
+.searchButton:hover {
   cursor: pointer;
 }
 
-.hideList {
+.searchButton {
   margin-top: 2.5em;
   background-color: #222;
   color: #e0e7e9;
   border: none;
   border-radius: 3em;
-  padding: 1em;
+  padding: .5em;
   box-shadow:
     5px 5px 11px 2px rgba(0, 0, 0, 1),
     -3px -3px 11px 0 rgba(90, 90, 90, 0.4);
@@ -176,14 +176,14 @@ button {
   text-shadow: 3px 3px 7px rgba(0, 0, 0, 1);
 }
 
-.hideList:hover {
+.searchButton:hover {
   letter-spacing: 1px;
   box-shadow:
     -9px -9px 29px 9px rgba(90, 90, 90, 0.4),
     5px 5px 9px 9px rgba(0, 0, 0, 1);
 }
 
-.hideList:active {
+.searchButton:active {
   box-shadow:
     5px 5px 11px 2px rgba(255, 255, 255, 0.2),
     -3px -3px 11px 0 rgba(0, 0, 0, 1);
@@ -191,7 +191,7 @@ button {
   transition: 0.1s ease-in-out;
 }
 
-.hideList:focus {
+.searchButton:focus {
   outline: none;
 }
 
@@ -375,8 +375,6 @@ footer {
 }
 
 
-
-
 .fullList {
   font-size: 1em;
 }
@@ -385,6 +383,10 @@ footer {
 .checkboxContainer {
   display: block;
   margin: auto;
+}
+
+.checkboxContainer {
+  margin-top: 2em;
 }
 
 .fullList,
@@ -512,7 +514,7 @@ body.light hr {
 }
 
 
-body.light .hideList {
+body.light .searchButton {
   background-color: #eee;
   color: #222;
   box-shadow:
@@ -521,13 +523,13 @@ body.light .hideList {
   text-shadow: 1px 1px 3px rgba(0, 0, 0, .8);
 }
 
-body.light .hideList:hover {
+body.light .searchButton:hover {
   box-shadow:
     10px 10px 11px 0 rgba(0, 0, 0, .8),
     -6px -6px 11px 2px rgba(255, 255, 255, .8);
 }
 
-body.light .hideList:active {
+body.light .searchButton:active {
   box-shadow:
     5px 5px 11px 2px rgba(255, 255, 255, 0.2),
     -3px -3px 11px 0 rgba(0, 0, 0, 1);
@@ -591,7 +593,7 @@ body.light .footerInfo {
     font-size: 1em;
   }
 
-  .hideList {
+  .searchButton {
     font-size: .9em;
   }
 
@@ -689,7 +691,7 @@ body.light .footerInfo {
     font-size: 1.1em;
   }
 
-  .hideList {
+  .searchButton {
     font-size: 1em;
   }
 
@@ -796,7 +798,7 @@ body.light .footerInfo {
     font-size: 1.2em;
   }
 
-  .hideList {
+  .searchButton {
     font-size: 1.1em;
   }
 
